--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
           <div class="content">
             <p>Samarjit is a YouTube channel where you can learn web designing, web development, ui/ux designing, html css tutorial, hover animation and effects, javascript and jquery tutorial and related so on.</p>
             <div class="social">
-              <a href="https://facebook.com/coding.np"><span class="fab fa-facebook-f"></span></a>
+              <a href="#"><span class="fab fa-facebook-f"></span></a>
               <a href="#"><span class="fab fa-twitter"></span></a>
-              <a href="https://instagram.com/coding.np"><span class="fab fa-instagram"></span></a>
-              <a href="https://youtube.com/c/codingnepal"><span class="fab fa-youtube"></span></a>
+              <a href="#"><span class="fab fa-instagram"></span></a>
+              <a href="#"><span class="fab fa-youtube"></span></a>
             </div>
           </div>
         </div>
@@ -67,7 +67,7 @@
       </div>
       <div class="bottom">
         <center>
-          <span class="credit">Created By <a href="https://samarjit.endtoendlearn.xyz/">Samarjit</a> | </span>
+          <span class="credit">Created By <a href="#">Samarjit</a> | </span>
           <span class="far fa-copyright"></span><span> 2021 All rights reserved.</span>
         </center>
       </div>
